# routefinder

./: .gitignore  README.md  eal.py  generate_data.py  index.html  pyproject.toml  run.py  run_eal.py  test.py
.github/workflows/: static.yml  tests.yml
configs/: main.yaml
configs/env/: default.yaml
configs/experiment/: debug.yaml  rfbase-100.yaml  rfbase-50.yaml  rfbase-50_norm.yaml
configs/experiment/ablations/: base.yaml  rf-100-no-globfeat.yaml  rf-100-no-polar.yaml  rf-100-no-sampling.yaml  rf-50-no-polar.yaml  rf-50-no-sampling.yaml
configs/experiment/ablations_old/: rf-100-no-sampling.yaml  rf-50-no-globfeat.yaml  rf-50-no-sampling.yaml
configs/experiment/feat_sampling/: all.yaml  single.yaml
configs/experiment/normalization/: rf-50_cumulative-div.yaml  rf-50_cumulative-sub.yaml  rf-50_exponential-0005-div.yaml  rf-50_exponential-0005-sub.yaml  rf-50_exponential-001-div.yaml  rf-50_exponential-001-sub.yaml  rf-50_exponential-002-div.yaml  rf-50_exponential-002-sub.yaml  rf-50_exponential-010-div.yaml  rf-50_exponential-010-sub.yaml  rf-50_exponential-025-div.yaml  rf-50_exponential-025-sub.yaml  rf-50_none.yaml  rf-50_normal-0005.yaml  rf-50_normal-001.yaml  rf-50_normal-002.yaml  rf-50_normal-010.yaml
configs/experiment/single_feat/: rf-100.yaml  rf-50.yaml
configs/model/: mtpomo.yaml  mvmoe-light.yaml  mvmoe.yaml  routefinder-moe-light.yaml  routefinder-moe.yaml  routefinder.yaml
data/cvrp/test/: 100.npz  100_sol_ortools.npz  100_sol_pyvrp.npz  50.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/cvrp/val/: 100.npz  100_sol_ortools.npz  100_sol_pyvrp.npz  200.npz  50.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdcvrp/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdcvrp/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrp/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrp/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpb/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpb/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpbl/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpbl/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpbltw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpbltw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpbtw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpbtw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpl/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpl/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpltw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpltw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmb/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmb/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmbl/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmbl/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmbltw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmbltw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmbtw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrpmbtw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrptw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdovrptw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpb/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpb/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpbl/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpbl/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpbltw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpbltw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpbtw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpbtw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpl/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpl/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpltw/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpltw/val/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  50_sol_pyvrp.npz
data/mdvrpmb/test/: 100_sol_ortools.npz  100_sol_pyvrp.npz  50_sol_ortools.npz  (+1 more)
examples/: 1.quickstart.ipynb  2.eval-cvrplib.ipynb  3-tsne.ipynb
routefinder/: __init__.py  utils.py
routefinder/baselines/: lkh.py  ortools.py  pyvrp.py  solve.py  utils.py
routefinder/data/: download_vrplib.py  generate.py  generate_data.py  generate_data_mb.py  run_or_solvers.py  utils.py
routefinder/envs/: __init__.py
routefinder/models/: __init__.py  encoder.py  model.py  policy.py  reward_normalization.py
scripts/: download_hf.py
static/css/: code.css  index.css
static/js/: copy-button.js
tests/: env.py  policy.py  training.py
(+374 files in other folders)
