[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "routefinder"
version = "0.3.0"
description = "Towards Foundation Models for Vehicle Routing Problems"
authors = [
    "Federico Berto <berto.federico2@gmail.com>",
    "Chuanbo Hua <cbhua@kaist.ac.kr>",
    "Nayeli Gast Zepeda <nayeli.gast@uni-bielefeld.de>",
    "Andre Hottung",
    "Leon Lan",
    "Niels Wouda",
    "Junyoung Park",
    "Kevin Tierney",
    "Jinkyoo Park",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
rl4co = { git = "https://github.com/ai4co/rl4co.git", branch = "main", extras = ["dev"] }
pyvrp = { version = "^0.9.1", optional = true }
ortools = { version = "^9.10.4067", optional = true }

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "black", "ruff", "pre-commit"]
solver = ["pyvrp", "ortools"]

[tool.ruff]
select = ["F", "E", "W", "I001"]
line-length = 90
show-fixes = false
target-version = "py311"
task-tags = ["TODO", "FIXME"]
ignore = ["E501"] # never enforce `E501` (line length violations), done in Black

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1

[tool.black]
line-length = 90
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Lines to exclude from coverage report (e.g., comments, debug statements)
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
