[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routefinder"
version = "0.3.2"
description = "Towards Foundation Models for Vehicle Routing Problems"
authors = [
    { name = "Federico Berto", email = "berto.federico2@gmail.com" },
    { name = "Chuanbo Hua", email = "cbhua@kaist.ac.kr" },
    { name = "Nayeli Gast Zepeda", email = "nayeli.gast@uni-bielefeld.de" },
    { name = "Andre Hottung" },
    { name = "Leon Lan" },
    { name = "Niels Wouda" },
    { name = "Junyoung Park" },
    { name = "Kevin Tierney" },
    { name = "Jinkyoo Park" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "huggingface-hub[cli]>=0.31.2",
    "rl4co",
]

[project.optional-dependencies]
dev = [
 "black>=24.0.0",
 "pre-commit>=3.0.0",
 "ruff>=0.5.0",
 "pytest>=7.0.0",
 "pip>=23.0.0",
 "ipykernel>=6.0.0",
 "pytest-xdist>=3.6.1",
]
solver = [
    "pyvrp>=0.9.1,<0.10",
    "ortools>=9.10.4067,<10",
]

[tool.uv.sources]
rl4co = { git = "https://github.com/ai4co/rl4co.git", branch = "main" }

[tool.ruff]
select = ["F", "E", "W", "I001"]
line-length = 90
show-fixes = false
target-version = "py311"
task-tags = ["TODO", "FIXME"]
ignore = ["E501"] # never enforce `E501` (line length violations), done in Black

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1

[tool.black]
line-length = 90
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Lines to exclude from coverage report (e.g., comments, debug statements)
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.6.1",
]
